# torrent

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  README.md  build.cake  build.ps1  vcpkg.json
docs/src/: conf.py  configuration.rst  creating-torrents.rst  index.rst  installing.rst  ipfilter.rst  keyboard-shortcuts.rst  pql.rst
include/: libniix.h
lang/: ar-SA.json  bg-BG.json  ca-ES.json  cs-CZ.json  de-DE.json  el-GR.json  en-US.json  es-ES.json  et-EE.json  fi-FI.json  fr-FR.json  he-IL.json  hi-IN.json  hr-HR.json  hu-HU.json  hy-AM.json  id-ID.json  it-IT.json  ja-JP.json  ka-GE.json  ko-KR.json  lt-LT.json  lv-LV.json  nb-NO.json  nl-NL.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  sk-SK.json  sr-SP.json  sv-SE.json  tr-TR.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
packaging/WiX/: NiiXTorrent.Components.wxs  NiiXTorrent.Directories.wxs  NiiXTorrent.wxs  NiiXTorrentBundle.wxs
res/dbmigrations/: 20181208115732_insert_default_settings.sql  20200912230012_enhance_setting_table.sql  20220508103321_insert_theme_id.sql
scripts/: Get-UniqueLanguageKeys.ps1  bootstrap.ps1
src/installer/: BootstrapperCore.config  NiiXBA.cs  NiiXTorrentBootstrapper.csproj  NiiXTorrentBootstrapper.sln  PicoBA.cs  PropertyNotifyBase.cs  RelayCommand.cs
src/installer/Models/: DetectionState.cs  InstallationState.cs
src/installer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/installer/ViewModels/: InstallFailedViewModel.cs  InstallViewModel.cs  InstallWaitingViewModel.cs  MainViewModel.cs  NewerViewModel.cs  ProgressViewModel.cs  UninstallViewModel.cs
src/installer/Views/: InstallAppliedView.xaml  InstallAppliedView.xaml.cs  InstallFailedView.xaml  InstallFailedView.xaml.cs  InstallView.xaml  InstallView.xaml.cs  InstallWaitingView.xaml  InstallWaitingView.xaml.cs  MainView.xaml  MainView.xaml.cs  NewerView.xaml  NewerView.xaml.cs  ProgressView.xaml  ProgressView.xaml.cs  UninstallAppliedView.xaml  UninstallAppliedView.xaml.cs  UninstallView.xaml  UninstallView.xaml.cs  UninstallWaitingView.xaml  UninstallWaitingView.xaml.cs
src/niiixtorrent/: application.cpp  crashpadinitializer.cpp  resources.rc  version.h
src/niiixtorrent/api/: libniix.cpp  libniix_impl.hpp
src/niiixtorrent/bittorrent/: session.hpp
src/niiixtorrent/core/: environment.cpp
src/niiixtorrent/core/geoip/: geoip.cpp
src/niiixtorrent/http/: httpclient.cpp
src/niiixtorrent/ipc/: applicationoptionsconnection.cpp
src/niiixtorrent/ui/: mainframe.cpp
src/niiixtorrent/ui/dialogs/: aboutdialog.cpp  addtorrentdialog.cpp  preferencesadvancedpage.cpp  preferencesconnectionpage.cpp  preferencesdialog.cpp  preferencesgeneralpage.cpp
src/niiixtorrent/ui/models/: torrentlistmodel.cpp
src/picotorrent/bittorrent/: session.cpp
src/picotorrent/core/: configuration.cpp  database.cpp  environment.cpp
src/picotorrent/ipc/: server.cpp
src/picotorrent/ui/: console.cpp  mainframe.cpp  taskbaricon.cpp  theme.hpp
src/picotorrent/ui/dialogs/: aboutdialog.cpp  addmagnetlinkdialog.cpp  addtrackerdialog.cpp  createtorrentdialog.cpp  preferencesdialog.cpp  preferencesgeneralpage.cpp
src/picotorrent/ui/filters/: pqltorrentfilter.cpp
src/picotorrent/ui/models/: torrentlistmodel.cpp
src/plugins/updater/: updater.cpp
src/pql/: CMakeLists.txt  README.md
